# ultralytics

./: .gitignore  det_demo.py  export_model.py  pred_fs.py  pred_pose.py  predict_hand_foot copy 2.py  predict_hand_foot copy.py  predict_hand_foot.py  predict_hand_foot_with_resize.py  predict_hand_foot_with_std_roi.py  predict_hand_foot_with_std_roi_侧面.py  test_d2_torchscript.py  train.py  train_detection_hand_foot.py  train_fs.py  train_pose.py
YOLOv8-ONNXRuntime-CPP/: CMakeLists copy.txt-bak  CMakeLists.txt  custom_inference.cpp  inference.cpp  main.cpp
d2_weights/: analysize_load_model_time.py
examples/YOLOv8-CPP-Inference/: classes.txt  main.cpp
examples/YOLOv8-ONNXRuntime/: main.py
examples/YOLOv8-OpenCV-ONNX-Python/: main.py
examples/torchscript-inference/: CMakeLists.txt  detect_hand_foot.cpp  detect_hand_foot.h  main.cpp  temp.bak
fs_data/: coco2yolo.py  labelme2coco-02.py
fs_data/yolo_dataset/test/: labels.cache
fs_data/yolo_dataset/train/: labels.cache
mydatasets/: coco2yolo.py  gen_hand_json.py
mydatasets/hand_data/: labelme2coco_new-l.py
track_fs/: bytebtrackts.py  split_video.py
ultralytics/tracker/trackers/: byte_tracker.py
ultralytics/yolo/cfg/: default.yaml
ultralytics/yolo/data/: augment.py
